[package]
name = "pcli"
version = "1.9.14"
edition = "2021"
authors = ["Julian Chultarsky <jchultarsky@physna.com>"]
description = "CLI client utility to the Physna public API/V2"
repository = "https://github.com/jchultarsky101/pcli.git"
license-file = "LICENSE"

[package.metadata.wix]
upgrade-guid = "A1D17DE8-CC70-4FD3-8165-2D79518FB881"
path-guid = "A53ACBFE-7EFC-4596-A9AA-5FB71AF64AA6"
license = false
eula = false

[[bin]]
name = "pcli"

[dependencies]
log = "0.4.17"
pretty_env_logger = "0.4.0"
futures = "0.3.28"
clap = { version = "4.2.5", features = ["derive", "env"] }
reqwest = { version = "0.11.18", features = ["blocking", "multipart", "json", "stream"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_yaml = "0.9.21"
serde_json = "1.0.96"
serde_path_to_error = "0.1.11"
tokio = { version = "1.28.0", features = ["full"] }
http = "0.2.9"
base64 = "0.21.0"
#openapi = { path = "../api-client-v2" }
dirs = "5.0.0"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.6"
jsonwebtoken = "8.3.1"
rpassword = "7.2.0"
indicatif = { version = "0.17.3", features = ["rayon"] }
csv = "1.3.0"
#claim = "0.5.0"
thiserror = "1.0.40"
#html-builder = "0.4"
uuid = { version = "1.3.1", features = ["v4", "serde"] }
colored = "2.0.0"
ptree = "0.4.0"
matrix = "0.22.0"
indexmap = "1.9.3"
petgraph = { version = "0.6.3", features = ["matrix_graph"] }
exitcode = "1.1.2"
url = { version = "2.5.0", features = ["serde"] }
substring = "1.4.5"
unicase = "2.6.0"
sysinfo = "0.28.4"
glob = "0.3.1"
serde_with = "2.1.0"
ntapi = "0.4.1"
itertools = "0.12.1"
self_update = { version = "0.42.0", features = ["archive-tar", "archive-zip", "tar", "zip", "compression-flate2", "compression-zip-bzip2", "compression-zip-deflate"] }
tempfile = "3.10.1"
chrono = "0.4.40"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

